force-app/main/default/objects/COM_RiskSurveyReport__c/COM_RiskSurveyReport__c.object-meta.xml
<CustomObject>
    <label>Risk Survey Report</label>
    <nameField>
        <displayFormat>RSR-{YY}{MM}{DD}-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Survey Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>