force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Approver1_lk__c.field-meta.xml
<CustomField>
    <fullName>Approver1_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.BizRoleTxt__c</field>
            <operation>contains</operation>
            <value>Risk Consulting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RiskSurveyByApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>