force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <label>Construction</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>