force-app/main/default/objects/COM_RiskSurveyReport__c/fields/DateofVisitE__c.field-meta.xml
<CustomField>
    <fullName>DateofVisitE__c</fullName>
    <label>Date of Visit</label>
    <type>Date</type>
</CustomField>