force-app/main/default/objects/COM_RiskSurveyReport__c/fields/ExecutiveSummary__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveSummary__c</fullName>
    <label>EXECUTIVE SUMMARY</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>