force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <label>Exposure</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>