force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Followup__c.field-meta.xml
<CustomField>
    <fullName>Followup__c</fullName>
    <label>Follow-up</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>