force-app/main/default/objects/COM_RiskSurveyReport__c/fields/GPSCoordinates__c.field-meta.xml
<CustomField>
    <fullName>GPSCoordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>