force-app/main/default/objects/COM_RiskSurveyReport__c/fields/ManagementPrograms__c.field-meta.xml
<CustomField>
    <fullName>ManagementPrograms__c</fullName>
    <label>Management Programs</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>