force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <label>Occupancy</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>