force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Opportunity_lk__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RiskSurveyByOpportunity</relationshipLabel>
    <relationshipName>Risk_Survey_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>