force-app/main/default/objects/COM_RiskSurveyReport__c/fields/PolicyHolder_lk__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Holder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isGeneralAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RiskSurveyByAccount</relationshipLabel>
    <relationshipName>Risk_Survey_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>