force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Preparation__c.field-meta.xml
<CustomField>
    <fullName>Preparation__c</fullName>
    <label>Preparation</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>