force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>