force-app/main/default/objects/COM_RiskSurveyReport__c/fields/ReportPurpose__c.field-meta.xml
<CustomField>
    <fullName>ReportPurpose__c</fullName>
    <label>Report Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>