force-app/main/default/objects/COM_RiskSurveyReport__c/fields/ReportType__c.field-meta.xml
<CustomField>
    <fullName>ReportType__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>영문 마켓보고서</fullName>
            </value>
            <value>
                <fullName>계약자 안내용 국문보고서</fullName>
            </value>
            <value>
                <fullName>협의</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>