force-app/main/default/objects/COM_RiskSurveyReport__c/fields/ReportWriting__c.field-meta.xml
<CustomField>
    <fullName>ReportWriting__c</fullName>
    <label>Report Writing</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>