force-app/main/default/objects/COM_RiskSurveyReport__c/fields/RequestComments__c.field-meta.xml
<CustomField>
    <fullName>RequestComments__c</fullName>
    <label>Request Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>