force-app/main/default/objects/COM_RiskSurveyReport__c/fields/RequestDateofVisitdt__c.field-meta.xml
<CustomField>
    <fullName>RequestDateofVisitdt__c</fullName>
    <label>(Request)Date of Visit</label>
    <type>Date</type>
</CustomField>