force-app/main/default/objects/COM_RiskSurveyReport__c/fields/RequestDateofVisittxt__c.field-meta.xml
<CustomField>
    <fullName>RequestDateofVisittxt__c</fullName>
    <label>(Request)Date of Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>