force-app/main/default/objects/COM_RiskSurveyReport__c/fields/RequestDueDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDueDate__c</fullName>
    <label>Request Due Date</label>
    <type>Date</type>
</CustomField>