force-app/main/default/objects/COM_RiskSurveyReport__c/fields/ServiceFee_fm__c.field-meta.xml
<CustomField>
    <fullName>ServiceFee_fm__c</fullName>
    <formula>Total_fm__c *  VisitingConsultant_lk__r.HourlyRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>