force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>