force-app/main/default/objects/COM_RiskSurveyReport__c/fields/SurveyType__c.field-meta.xml
<CustomField>
    <fullName>SurveyType__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>