force-app/main/default/objects/COM_RiskSurveyReport__c/fields/Total_fm__c.field-meta.xml
<CustomField>
    <fullName>Total_fm__c</fullName>
    <formula>Preparation__c +  Survey__c +  ReportWriting__c +  Followup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>