force-app/main/default/objects/COM_RiskSurveyReport__c/fields/VisitingConsultant_lk__c.field-meta.xml
<CustomField>
    <fullName>VisitingConsultant_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visiting Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.BizRoleTxt__c</field>
            <operation>contains</operation>
            <value>Risk Consulting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RiskSurveyReports</relationshipName>
    <type>Lookup</type>
</CustomField>