force-app/main/default/objects/COM_RiskSurveyReport__c/fields/VisitingSites__c.field-meta.xml
<CustomField>
    <fullName>VisitingSites__c</fullName>
    <label>Visiting Sites</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>