force-app/main/default/objects/COM_RiskSurveyReport__c/fields/X_PolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>X_PolicyHolder__c</fullName>
    <label>(X)Policy Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>