force-app/main/default/objects/COM_RiskSurveyReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_lk__c</columns>
    <columns>X_PolicyHolder__c</columns>
    <columns>VisitingConsultant_lk__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>